--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,9 @@ services:
     build: .
     container_name: compensacion-service
     ports:
-      - "8081:8080"
+      - "8084:8084"
     environment:
+      - SERVER_PORT=8084
       - SPRING_DATASOURCE_URL=jdbc:postgresql://db-compensacion:5432/compensacion_db
       - SPRING_DATASOURCE_USERNAME=postgres
       - SPRING_DATASOURCE_PASSWORD=admin
@@ -20,4 +21,4 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=admin
     ports:
-      - "5433:5432"
+      - "5436:5432"
