--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=compensacion
+
+# ESTRATEGIA DE NOMBRAMIENTO (OBLIGATORIO para CamelCase en BD)
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+
+# Opcional: Para ver en consola que esta creando las tablas tal cual quieres
+spring.jpa.show-sql=true
